[gd_scene load_steps=12 format=2]

[ext_resource path="res://props/shadow/Shadow.tscn" type="PackedScene" id=1]
[ext_resource path="res://mobs/Mob.gd" type="Script" id=2]
[ext_resource path="res://mobs/kill.wav" type="AudioStream" id=4]
[ext_resource path="res://mobs/hurt.wav" type="AudioStream" id=5]

[sub_resource type="CircleShape2D" id=5]
resource_local_to_scene = true

[sub_resource type="CircleShape2D" id=4]
resource_local_to_scene = true
radius = 15.5

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Shadow:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.252122, 0.25 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Sprite:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Shadow:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.356863 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Sprite:frame")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Shadow:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -0.210937, 13 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("ShockArea/Particles2D:scale")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.25, 0.25 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("ShockArea:visible")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=7]
resource_name = "die"
length = 0.333333
step = 0.0333333
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.266667, 0.333333 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.831373, 0.117647, 0.235294, 1 ), Color( 0.831373, 0.117647, 0.235294, 1 ), Color( 0.831373, 0.117647, 0.235294, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.0333333, 0.1, 0.166667, 0.2, 0.266667, 0.333333 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1, 1.25 ), Vector2( 3.5, -11 ), Vector2( 1.5, -18.25 ), Vector2( 0.25, -19.5 ), Vector2( -2, -4.25 ), Vector2( 0.25, 12.5 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.166667, 0.2, 0.266667, 0.333333 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 17.0018, 4.57816, 1.74122, -0.805709, -7.63472 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.0333333, 0.1, 0.2, 0.266667, 0.33 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.28666, 0.89716 ), Vector2( 0.85, 1 ), Vector2( 1.15, 1.1 ), Vector2( 1.4, 0.7 ), Vector2( 2.25792, 0.0354874 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Shadow:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.099, 0.333333 ),
"transitions": PoolRealArray( 0.554785, 1.86607, 1 ),
"update": 0,
"values": [ Vector2( 0.25, 0.25 ), Vector2( 0.33, 0.27 ), Vector2( 0.0123457, 0.0476191 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Shadow:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.0999999, 0.333333 ),
"transitions": PoolRealArray( 1, 1.86607, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.356863 ), Color( 1, 1, 1, 0.356863 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "hit"
length = 0.333333
step = 0.0333333
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.066, 0.099, 0.132, 0.165, 0.264, 0.266666 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -3, -2.75 ), Vector2( -3, 4 ), Vector2( 3.5, -4 ), Vector2( -2.5, -2.25 ), Vector2( 4, 0 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.0333333, 0.066, 0.132, 0.166667, 0.2, 0.233333, 0.266666 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.558647, 1.74141 ), Vector2( 1.60606, 0.64 ), Vector2( 1, 1 ), Vector2( 1.13131, 1.32 ), Vector2( 1.13131, 0.9888 ), Vector2( 1.13131, 1.16364 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "hover"
length = 1.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1.8025 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Shadow:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1.6245 ),
"update": 0,
"values": [ Vector2( 0.25, 0.25 ) ]
}

[node name="Mob" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 19
script = ExtResource( 2 )

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 0
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
modulate = Color( 1, 1, 1, 0.211765 )
position = Vector2( 0, 0.33371 )
shape = SubResource( 5 )

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 0
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
modulate = Color( 1, 1, 1, 0.211765 )
position = Vector2( 0, 0.33371 )
shape = SubResource( 4 )

[node name="Shadow" parent="." instance=ExtResource( 1 )]
position = Vector2( -0.210937, 13 )
scale = Vector2( 0.252122, 0.25 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

[node name="Alert" type="Sprite" parent="Sprite"]

[node name="BeforeAttackTimer" type="Timer" parent="."]
one_shot = true

[node name="CoolDownTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "hover"
anims/RESET = SubResource( 6 )
anims/die = SubResource( 7 )
anims/hit = SubResource( 9 )
anims/hover = SubResource( 8 )

[node name="DieSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[node name="HurtSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="Timer" type="Timer" parent="."]
